...
    <string name="widget_config_text_size">Text size: %1$sx</string>
    <string name="widget_config_apply">Apply</string>
    <string name="previous_track">Previous track</string>
    <string name="next_track">Next track</string>
    <string name="skip_silence">Skip Silence</string>
    <string name="volume_boost">Volume boost</string>
    <string name="more">More</string>
    <string name="remove_book_title">Remove from Library</string>
    <string name="remove_book_description">This book will be hidden from your library. Your audio files will not be deleted.</string>
    <string name="remove_book_description_delete">This book will be hidden from your library and its folder will be permanently deleted from storage, including any covers and other files inside it.</string>
    <string name="remove_book_delete_failed">The book was removed from your library, but its files could not be deleted.</string>
    <string name="remove_book_confirm">Remove</string>
    <string name="remove_book_and_delete">Remove &amp; Delete Files</string>
...
    <string name="listening_log_clear_history">Clear History</string>
    <string name="listening_log_empty">No listening sessions yet.\nStart playing to track your progress.</string>
    <string name="listening_log_session_duration">Duration: %s</string>
    <string name="listening_log_playback_range">%1$s → %2$s</string>
    <string name="dialog_confirm">Set</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="chapter_fix_menu">Chapter Fix</string>
    <string name="edit_chapter_names">Edit chapter names</string>
    <string name="chapter_offset_label">Chapter numbering</string>
    <string name="chapter_editor_offset_decrement">Decrease chapter offset</string>
    <string name="chapter_editor_offset_increment">Increase chapter offset</string>
    <string name="chapter_editor_chapters">Chapters</string>
    <string name="chapter_editor_playing">Playing</string>
    <string name="chapter_editor_custom_name">Custom name</string>
    <string name="chapter_editor_playing_custom_name">Playing • Custom name</string>
    <string name="chapter_name_label">Chapter name</string>
    <string name="chapter_editor_edit_name">Edit chapter name</string>
    <string name="chapter_editor_restore_original_name">Restore original name</string>
    <string name="chapter_editor_reset_all">Reset all to defaults</string>
    <string name="chapter_editor_reset_confirm_title">Reset all chapter names?</string>
    <string name="chapter_editor_reset_confirm_message">This will remove all custom chapter names and reset the chapter number offset to 0.</string>
    <string name="chapter_editor_reset_confirm_button">Reset</string>
    <string name="chapter_name_length_counter">%1$d/200</string>
    <string name="unknown_chapter">Unknown chapter</string>
    <string name="content_cover">Shows cover to choose</string>
    <string name="change_book_name">Name</string>
    <string name="download_book_cover">Cover from the Internet</string>
    <string name="pick_book_cover">Cover from the file system</string>
    <string name="cover_search_template_no_author">%s audiobook cover</string>
    <string name="cover_search_template_with_author">%1$s by %2$s audiobook cover</string>
    <string name="cover_search.icon_recent">Recent query</string>
    <string name="cover_search.author">Author</string>
...
    <string name="book_header_current">Current</string>
    <string name="book_header_not_started">Not started Yet</string>
    <string name="book_header_completed">Completed</string>
    <string name="book_finished_on">Finished %1$s</string>
    <string name="book_header_expand_section">Expand %1$s</string>
    <string name="book_header_collapse_section">Collapse %1$s</string>
    <string name="close">Close</string>
    <string name="delete">Delete</string>
    <string name="add">Add</string>
    <string name="folder_mode_root">Top-Level Book Mode: Subfolders are books</string>
    <string name="folder_mode_single">Single Book Mode: One folder equals one book.</string>
    <string name="folder_mode_author">Author-Book Mode: Subfolders are authors, sub-subfolders are books.</string>
    <plurals name="folder_type_file_count">
...
    <string name="migration_detail_content_position_current_chapter_title">Current chapter</string>
    <string name="migration_detail_content_position_current_chapter_position">Position in chapter</string>
    <string name="migration_delete_dialog_title">Delete Positions</string>
    <string name="migration_delete_dialog_content">Once you delete the old positions you won\'t be able to recover your old playback positions.</string>
    <string name="migration_delete_dialog_action_delete">Delete</string>
    <string name="migration_delete_dialog_action_keep">Keep</string>
    <string name="delete_book_bottom_sheet_title">Delete Book</string>
    <string name="delete_book_dialog_title">Delete Book</string>
    <string name="delete_book_dialog_deletion_confirmation">Delete my files</string>
    <string name="delete_book_dialog_content">This will delete the files on your device.</string>
    <string name="search_hint">What are you looking for?</string>
    <string name="battery_optimization_rationale">Due to your Power restrictions, playback interruptions might happen.</string>
    <string name="battery_optimization_action">Update</string>
...
